# OpenEmbeddings

./: .coverage  .coverage.Hypocrites-MacBook-Pro.local.31937.XUIuhrix  .coverage.Hypocrites-MacBook-Pro.local.73882.XDUVVULx  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FINAL_IMPROVEMENTS_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  README.md  SECURITY.md  codecov.yml  coverage.xml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: MASTER_DOCUMENTATION.md  evaluation_guide.md
examples/: comprehensive_demo.py  experiment_config.json  research_notebook.ipynb
openembeddings/: __init__.py  __main__.py  advanced_cli.py  benchmarks.py  cli.py  evaluation_harness.py  experiments.py  py.typed  utils.py  web_api.py
openembeddings.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
openembeddings/models/: __init__.py  dense_embedder.py  hybrid_retriever.py  reranker.py  sparse_embedder.py
test_index/: config.json
test_index/dense_embedder/: config.json
test_index/dense_embedder/sbert_model/: config_sentence_transformers.json
tests/: test_hybrid.py  test_models.py
